added population datasets

--- a/Data analysis challenge.ipynb
+++ b/Data analysis challenge.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 1,
    "id": "89a36d9f-7d8a-4cb3-beb1-e6061a5b9e54",
    "metadata": {},
    "outputs": [],
@@ -38,12 +38,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "id": "2c816c68-37bf-4c0f-bfe2-e9f95fc8dec1",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "MonthYear",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "Station",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "Station_Type ",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "Entry_Exit",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "Trip",
+         "rawType": "object",
+         "type": "string"
+        }
+       ],
+       "ref": "5c429461-17c1-46b5-95a3-10e4e0fda9c8",
+       "rows": [
+        [
+         "0",
+         "Aug-24",
+         "Aberdeen  Station",
+         "train",
+         "Entry",
+         "Less than 50"
+        ],
+        [
+         "1",
+         "Aug-24",
+         "Aberdeen  Station",
+         "train",
+         "Exit",
+         "Less than 50"
+        ],
+        [
+         "2",
+         "Aug-24",
+         "Adamstown  Station",
+         "train",
+         "Entry",
+         "2585"
+        ],
+        [
+         "3",
+         "Aug-24",
+         "Adamstown  Station",
+         "train",
+         "Exit",
+         "2391"
+        ],
+        [
+         "4",
+         "Aug-24",
+         "Albion Park  Station",
+         "train",
+         "Entry",
+         "6919"
+        ]
+       ],
+       "shape": {
+        "columns": 5,
+        "rows": 5
+       }
+      },
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -124,7 +205,7 @@
        "4    Aug-24  Albion Park  Station         train      Entry          6919"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,12 +219,113 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 3,
    "id": "46fd5f5e-f01e-4256-ac60-a5f9c1943ee4",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "Train_Station",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "Street_Name",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "Street_Type",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "Entrance_Type",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "LAT",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "LONG",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "Exit_Number",
+         "rawType": "float64",
+         "type": "float"
+        }
+       ],
+       "ref": "76eb553d-1339-43bf-a710-bb2842b70aec",
+       "rows": [
+        [
+         "0",
+         "Aberdeen",
+         "Macqueen",
+         "St",
+         "Ramp",
+         "-32.16688641",
+         "150.8919573",
+         null
+        ],
+        [
+         "1",
+         "Aberdeen",
+         "Macqueen",
+         "St",
+         "Stairs",
+         "-32.16689969",
+         "150.8919751",
+         null
+        ],
+        [
+         "2",
+         "Adamstown",
+         "Park",
+         "Ave",
+         "Path",
+         "-32.9337056",
+         "151.7204518",
+         null
+        ],
+        [
+         "3",
+         "Adamstown",
+         "Park",
+         "Ave",
+         "Path",
+         "-32.93382729",
+         "151.7202364",
+         null
+        ],
+        [
+         "4",
+         "Adamstown",
+         "St James",
+         "Rd",
+         "Stairs",
+         "-32.93341396",
+         "151.7203632",
+         null
+        ]
+       ],
+       "shape": {
+        "columns": 7,
+        "rows": 5
+       }
+      },
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -243,7 +425,7 @@
        "4          NaN  "
       ]
      },
-     "execution_count": 35,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 4,
    "id": "aa1d4f54-8b9f-49c4-bcfe-71fee18a6e07",
    "metadata": {},
    "outputs": [
@@ -418,7 +600,7 @@
        "4  LINESTRING (16798220.922 -4093038.532, 1679824...  "
       ]
      },
-     "execution_count": 57,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -434,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 5,
    "id": "8a6693de-2f26-4a7c-9810-b0e2e9d7d755",
    "metadata": {},
    "outputs": [
@@ -442,12 +624,113 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\vedan\\AppData\\Local\\Temp\\ipykernel_53532\\2516324058.py:11: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
+      "C:\\Users\\soora\\AppData\\Local\\Temp\\ipykernel_24008\\2516324058.py:11: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
       "  opal_df = pd.concat(dfs, ignore_index=True)\n"
      ]
     },
     {
      "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "trip_origin_date",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "mode_name",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "ti_region",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "tap_hour",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "Tap_Ons",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "Tap_Offs",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "https://opendata-tpa.transport.nsw.gov.au/Opal_Patronage/2020-01/Opal_Patronage_20200101.txt",
+         "rawType": "object",
+         "type": "unknown"
+        }
+       ],
+       "ref": "67e278f9-a484-47c7-adbb-01949e91bfe7",
+       "rows": [
+        [
+         "0",
+         "2020-01-01",
+         "Bus",
+         "Chatswood",
+         "0.0",
+         "<50",
+         "<50",
+         null
+        ],
+        [
+         "1",
+         "2020-01-01",
+         "Bus",
+         "Macquarie Park",
+         "0.0",
+         "<50",
+         "<50",
+         null
+        ],
+        [
+         "2",
+         "2020-01-01",
+         "Bus",
+         "Newcastle and surrounds",
+         "0.0",
+         "<50",
+         "<50",
+         null
+        ],
+        [
+         "3",
+         "2020-01-01",
+         "Bus",
+         "North Sydney",
+         "0.0",
+         "700",
+         "100",
+         null
+        ],
+        [
+         "4",
+         "2020-01-01",
+         "Bus",
+         "Other",
+         "0.0",
+         "4500",
+         "3200",
+         null
+        ]
+       ],
+       "shape": {
+        "columns": 7,
+        "rows": 5
+       }
+      },
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -554,7 +837,7 @@
        "4                                                NaN                                            "
       ]
      },
-     "execution_count": 61,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -593,7 +876,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -607,7 +890,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
